# pipelines

./: Dockerfile  Pipeline.py  docker-compose.yml  norm  pyproject.toml
.github/workflows/: docker-image.yml
Dagster_and_Prefect/: Dagster
db/: Dockerfile
example_pipeline/: pipeline.py
pipelines/: PostrgresDatabase.py  config.py  load.py  tasks.py
tests/: conftest.py  test_tasks.py
tests/data/: pipeline.py
