[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "data pipeline"
authors = ["Максим <scorpybeats@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"
sqlalchemy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
